Fixed: Unmapped Delete button cutoff

--- a/frontend/src/UnmappedFiles/UnmappedFilesTableHeader.css
+++ b/frontend/src/UnmappedFiles/UnmappedFilesTableHeader.css
@@ -15,5 +15,5 @@
 .actions {
   composes: headerCell from '~Components/Table/VirtualTableHeaderCell.css';
 
-  flex: 0 1 90px;
+  flex: 0 1 95px;
 }
