--- a/frontend/src/UnmappedFiles/UnmappedFilesTableRow.css
+++ b/frontend/src/UnmappedFiles/UnmappedFilesTableRow.css
@@ -18,5 +18,5 @@
 .actions {
   composes: cell from '~Components/Table/Cells/VirtualTableRowCell.css';
 
-  flex: 0 0 90px;
+  flex: 0 0 95px;
 }
